--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <title>Mis aficiones</title>
 </head>
-<body style="background-color: aqua;">
+<body>
     <H1  style="font-family:Arial, Helvetica, sans-serif;text-align: center;">Bienvenido</H1>
     <p style="text-align: center;">Esta es una pagina web de prueba en el que voy a enseñar mis afficiones</p>
     <ul style="list-style-type: none;text-align: center;">
